<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:id="@+id/TextView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/dati" />
     <TextView
        android:id="@+id/TextView2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/user" />
     <EditText 
         android:id="@+id/EditText2"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:hint="@string/user" />
     <TextView
        android:id="@+id/TextView3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/pass" />
     <EditText
         android:id="@+id/EditText3"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:inputType="textVisiblePassword"
         android:hint="@string/pass" />
      <Button
         android:id="@+id/button2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/login" />
         "
    
    

</LinearLayout>